[gd_scene load_steps=4 format=3 uid="uid://tisxpr14vhf8"]

[ext_resource type="Script" uid="uid://iaroo7w4yfn4" path="res://Resources/Apps/DemonHire/ItemDisplayer.gd" id="1_h5ewi"]

[sub_resource type="LabelSettings" id="LabelSettings_h5ewi"]
font_size = 8
font_color = Color(0.67481464, 0.67481464, 0.6748146, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n2m6j"]
font_size = 32

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_h5ewi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ITEM NAME"

[node name="ItemDescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ITEM DESCRIPTION"
label_settings = SubResource("LabelSettings_h5ewi")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ItemAmountLabel" type="Label" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "2"
label_settings = SubResource("LabelSettings_n2m6j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemBuyButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Buy"

[connection signal="pressed" from="VBoxContainer2/ItemBuyButton" to="." method="_on_item_buy_button_pressed"]
